I should group my commits instead of sending out a new one for every fart that got redesigned

--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -69,7 +69,7 @@
             <MudTd>
                 <GridChange Change="@context.GridChange" />
             </MudTd>
-            <MudTd>
+            <MudTd Class="overflow-hider">
                 <MudStack Row="true">
                     <MudText>
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
@@ -86,7 +86,7 @@
             <MudTd Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
                 <MudText>@context.Number</MudText>
             </MudTd>
-            <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
+            <MudTd Class="overflow-hider" Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
                 <MudText>@context.TeamName</MudText>
             </MudTd>
             <MudTd>
