--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -59,6 +59,12 @@ html, body {
     text-align: center !important;
 }
 
+.overflow-hider {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .field-xs {
     width: 75px;
 }
