--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -197,14 +197,14 @@
 
     string SignalIcon(string raceEvent) => raceEvent switch
     {
-        "DriverDnf" =>      Icons.Material.Filled.CarCrash,
-        "CarDnf" =>         Icons.Material.Filled.CarRepair,
-        "EngineDnf" =>      Icons.Material.Filled.EvStation,
-        "Mistake" =>        Icons.Material.Filled.ErrorOutline,
-        "Pitstop" =>        Icons.Material.Filled.LocalGasStation,
-        "Swap" =>           Icons.Material.Filled.SwapVert,
-        "Death" =>          Icons.Material.Filled.Balance,
-        _ =>                Icons.Material.Filled.QuestionMark
+        "DriverDnf"     => Icons.Material.Filled.CarCrash,
+        "CarDnf"        => Icons.Material.Filled.CarRepair,
+        "EngineDnf"     => Icons.Material.Filled.EvStation,
+        "Mistake"       => Icons.Material.Filled.ErrorOutline,
+        "Pitstop"       => Icons.Material.Filled.LocalGasStation,
+        "Swap"          => Icons.Material.Filled.SwapVert,
+        "Death"         => IconCollection.Skull,
+        _               => Icons.Material.Filled.QuestionMark
     };
 
     string GetLocation() => "absolute mud-height-full mud-width-full d-flex align-start justify-center";
