--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -120,3 +120,11 @@ html, body {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+/* tabler icons */
+/*.icon-tabler {
+    color: red;
+    width: 32px;
+    height: 32px;
+    stroke-width: 1.25;
+}*/
