Icon usage update

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -133,9 +133,9 @@
     string newExampleString = "Stored and retrieved from the local storage";
     int raceAmount = 5;
     int cycler = 0;
-    string[] customIcons = new[] { IconCollection.CarCrash, IconCollection.CrossFilled, IconCollection.Engine, IconCollection.Helmet, IconCollection.Skull, IconCollection.SteeringWheel, IconCollection.TrafficCone, };
+    string[] customIcons = IconCollection.ArrayOfIcons;
     int iconCycler = 0;
-    string activeCustomIcon = IconCollection.CarCrash;
+    string activeCustomIcon = IconCollection.BrandToyota;
 
     protected override async Task OnInitializedAsync()
     {
