--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -127,13 +127,13 @@
             <MudTd colspan="20">
                 <MudStack Row="true">
                     <MudText>Event Legend</MudText>
-                    <MudChip Icon="@Icons.Material.Filled.CarCrash" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Driver</MudChip>
-                    <MudChip Icon="@Icons.Material.Filled.CarRepair" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Car</MudChip>
-                    <MudChip Icon="@Icons.Material.Filled.EvStation" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Engine</MudChip>
+                    <MudChip Icon="@IconCollection.HelmetOff" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Driver</MudChip>
+                    <MudChip Icon="@IconCollection.CarCrash" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Car</MudChip>
+                    <MudChip Icon="@IconCollection.EngineOff" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">DNF Engine</MudChip>
                     <MudChip Icon="@Icons.Material.Filled.ErrorOutline" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Mistake</MudChip>
                     <MudChip Icon="@Icons.Material.Filled.LocalGasStation" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Pitstop</MudChip>
                     <MudChip Icon="@Icons.Material.Filled.SwapVert" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Driver Swap</MudChip>
-                    <MudChip Icon="@Icons.Material.Filled.Balance" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Fatality</MudChip>
+                    <MudChip Icon="@IconCollection.Skull" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Fatality</MudChip>
                     <MudChip Icon="@Icons.Material.Filled.QuestionMark" IconColor="Color.Tertiary" Size="Size.Small" DisableRipple="true" Label="true">Undetermined</MudChip>
                 </MudStack>
             </MudTd>
@@ -197,9 +197,9 @@
 
     string SignalIcon(string raceEvent) => raceEvent switch
     {
-        "DriverDnf"     => Icons.Material.Filled.CarCrash,
-        "CarDnf"        => Icons.Material.Filled.CarRepair,
-        "EngineDnf"     => Icons.Material.Filled.EvStation,
+        "DriverDnf"     => IconCollection.HelmetOff,
+        "CarDnf"        => IconCollection.CarCrash,
+        "EngineDnf"     => IconCollection.EngineOff,
         "Mistake"       => Icons.Material.Filled.ErrorOutline,
         "Pitstop"       => Icons.Material.Filled.LocalGasStation,
         "Swap"          => Icons.Material.Filled.SwapVert,
