--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -30,7 +30,7 @@
 </MudContainer>
 
 @code {
-    private List<Engine> EngineNames = new();
+    private List<Engine> EngineNames { get; set; } = new();
 
     protected override async Task OnInitializedAsync()
     {
